kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlstub-web
  namespace: urlstub
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-size-slug: "lb-small"
spec:
  type: LoadBalancer
  selector:
    app: urlstub-web
  ports:
  - port: 80
    targetPort: 3000
